# grinn-bot

./: .envtemplate  .gitignore  Cargo.toml  Dockerfile  README  docker-compose.yml
src/: anime_guessing_game.rs  anime_year_duration.rs  commands.rs  database.rs  graphql_queries.rs  group_scores.rs  helpers.rs  main.rs  types.rs
src/anime_guessing_helpers/: mod.rs  staff.rs  studios.rs  voice_actors.rs
src/api_routes/: get_anime.rs  get_teams.rs  mod.rs
src/commands/: animeguess.rs  check_compat.rs  create_team.rs  delete_teams.rs  giveup.rs  help.rs  mod.rs
src/commands/anime_guessing/: animeguess.rs  guess.rs  hint.rs  mod.rs
src/commands/check_compat/: check_compat.rs  check_compat_single.rs  mod.rs
src/commands/server_list/: add_user.rs  mod.rs  remove_user.rs  show_anime.rs
src/commands/teamswap/: claim.rs  create_team.rs  delete_team.rs  delete_teams.rs  display_teams.rs  edit_team_image.rs  edit_team_name.rs  leave.rs  mod.rs  remove_submission.rs  set_max_claims.rs  set_phase.rs  status.rs  submit_anime.rs  unclaim.rs
src/compat_check/: calculate_cosine_sim.rs  calculate_z?.rs  calculate_z_score.rs  get_anime_list.rs  get_friends.rs  mean_abs_diff.rs  mean_abs_diff_norm.rs  mod.rs  normalize_lists.rs
src/server_list/: embed_helpers.rs  get_favs.rs  get_user_list.rs  mod.rs
src/team_swapping/: mod.rs  team_swap_utils.rs
