[package]
name = "da-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = "0.11.8"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"]}
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "model", "rustls_backend"]} 
serde = { version = "1.0", features = ["derive"]}
rand = { version = "0.8.5"}
rusqlite = { version = "0.32.0", features = ["bundled"] }
strsim = "0.11.1"
poise = "0.6.1"
dotenvy = "0.15.7"
regex = "1.11.0"
warp = "0.3.7"
chrono = "0.4.38"
